# holoom

./: .gitignore  Cargo.toml  README.md  build_containers.sh  flake.nix  index.html  modules.html  package-lock.json  package.json  tsconfig.json
assets/: navigation.js  search.js
authority_agent_sandbox/: build.sh
classes/: EvmBytesSignatureRequestorClient.html  ExternalIdAttestationRequestorClient.html  FaceitAuthFlowClient.html  HoloomClient.html  PingCoordinator.html  RecordsCoordinator.html  SignerCoordinator.html  UsernameRegistryCoordinator.html  authority_src.AccessTokenAssessor.html  authority_src.BytesSigner.html  authority_src.EvmBytesSignerClient.html  authority_src.ExternalIdAttestorClient.html  authority_src.OfferCreator.html  authority_src.PingCoordinator.html  authority_src.QueryService.html  authority_src.RecordsCoordinator.html  authority_src.SignerCoordinator.html  authority_src.UsernameRegistryCoordinator.html  authority_src.VersionCoordinator.html  (+3 more)
crates/evm_attestation/coordinator/: Cargo.toml
crates/evm_attestation/coordinator/src/: evm_signing_offer.rs  lib.rs
crates/external_attestation/coordinator/: Cargo.toml
crates/external_attestation/coordinator/src/: chain_info.rs  external_attestation.rs  lib.rs
crates/external_attestation/coordinator/tests/: config.rs  external_id_attestation.rs
crates/external_attestation/integrity/: Cargo.toml
crates/external_attestation/integrity/src/: agent_external_id_attestation.rs  entry_types.rs  external_id_attestation.rs  external_id_to_attestation.rs  lib.rs  link_types.rs
crates/external_id_registry_coordinator/: Cargo.toml
crates/external_id_registry_coordinator/src/: external_id_attestation.rs  lib.rs
crates/external_id_registry_integrity/: Cargo.toml
crates/external_id_registry_integrity/src/: lib.rs
crates/game_identity_happ_tests/: Cargo.toml  tests.rs
crates/game_identity_integrity/: Cargo.toml
crates/game_identity_integrity/src/: lib.rs
crates/game_identity_rocket_controllers/: Cargo.toml
crates/game_identity_rocket_controllers/src/: health.rs  holochain.rs  username_registry.rs
crates/game_identity_rocket_state/: Cargo.toml
crates/game_identity_rocket_state/src/: holochain.rs
crates/game_identity_tests/: Cargo.toml  tests.rs
crates/game_identity_tests/src/: lib.rs
crates/game_identity_tests/src/tests/: signer.rs
crates/game_identity_tests/src/tests/username_registry/: user_metadata.rs  username_attestation.rs  wallet_attestation.rs
crates/game_identity_tests/tests/: signer.rs  username_registry.rs
crates/game_identity_validation/: Cargo.toml
crates/game_identity_validation/src/: agent_username_attestation.rs  agent_wallet_attestation.rs  lib.rs  username_attestation.rs
crates/holoom_recipe_execution/coordinator/: Cargo.toml
crates/holoom_recipe_execution/coordinator/src/: holoom_recipe_execution.rs  lib.rs
crates/holoom_recipe_execution/integrity/: Cargo.toml
crates/holoom_recipe_execution/integrity/src/: entry_types.rs  holoom_recipe_execution.rs  lib.rs  link_types.rs
crates/holoom_rocket_controllers/: Cargo.toml
crates/holoom_rocket_controllers/src/: health.rs  holochain.rs  lib.rs  username_registry.rs
crates/holoom_rocket_server/: Cargo.toml
crates/holoom_rocket_server/src/: main.rs
crates/holoom_rocket_server/src/utils/: cors.rs
crates/holoom_rocket_types/: Cargo.toml
crates/holoom_rocket_types/src/: endpoint.rs  error.rs  result.rs
crates/holoom_types/: Cargo.toml
crates/holoom_types/src/: evm_signing_offer.rs  external_id.rs  lib.rs  metadata.rs  oracle.rs  recipe.rs  username.rs  wallet.rs
crates/jaq_wrapper/: Cargo.toml
crates/jaq_wrapper/src/: lib.rs
crates/oracle_document/coordinator/: Cargo.toml
crates/oracle_document/coordinator/src/: lib.rs  oracle_document.rs
crates/oracle_document/coordinator/tests/: config.rs  oracle_document.rs
crates/oracle_document/integrity/: Cargo.toml
crates/oracle_document/integrity/src/: entry_types.rs  lib.rs  link_types.rs  name_oracle_document.rs  oracle_document.rs  relate_oracle_document_name.rs
crates/shared_utils/: Cargo.toml
crates/shared_utils/src/: helpers.rs  lib.rs
crates/username_attestation/coordinator/: Cargo.toml
crates/username_attestation/coordinator/src/: lib.rs  user_metadata.rs  username_attestation.rs
crates/username_attestation/coordinator/tests/: config.rs  signer.rs  username_attestation.rs
crates/username_attestation/integrity/: Cargo.toml
crates/username_attestation/integrity/src/: agent_username_attestation.rs  entry_types.rs  lib.rs  link_types.rs  user_metadata.rs  username_attestation.rs
crates/username_registry_coordinator/: Cargo.toml
crates/username_registry_coordinator/src/: evm_signing_offer.rs  external_id_attestation.rs  jq_execution.rs  lib.rs  oracle_document.rs  oracle_document_list_snapshot.rs  recipe.rs  recipe_execution.rs  user_metadata.rs  username_attestation.rs  wallet_attestation.rs
crates/username_registry_integrity/: Cargo.toml
crates/username_registry_integrity/src/: entry_types.rs  lib.rs  link_types.rs  rejection_detail.rs
crates/username_registry_utils/: Cargo.toml
crates/username_registry_utils/src/: lib.rs
crates/username_registry_validation/: Cargo.toml
crates/username_registry_validation/src/: agent_external_id_attestation.rs  agent_username_attestation.rs  evm_signing_offer.rs  external_id_attestation.rs  external_id_attestor.rs  external_id_to_attestation.rs  jq_execution.rs  lib.rs  name_oracle_document.rs  oracle_document_list_snapshot.rs  publisher.rs  recipe.rs  recipe_execution.rs  relate_oracle_document_name.rs  user_metadata.rs  username_attestation.rs  wallet_attestation.rs
crates/wallet_attestation/coordinator/: Cargo.toml
crates/wallet_attestation/coordinator/src/: lib.rs  wallet_attestation.rs
crates/wallet_attestation/coordinator/tests/: config.rs  wallet_attestation.rs
crates/wallet_attestation/integrity/: Cargo.toml
crates/wallet_attestation/integrity/src/: agent_wallet_attestation.rs  entry_types.rs  lib.rs  link_types.rs  wallet_attestation.rs
docker/: Dockerfile  (+4 more)
(+263 files in other folders)
