[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
hdi = "=0.5.0-dev.9"
hdk = "=0.4.0-dev.10"
holo_hash = { version = "=0.4.0-dev.8", features = ["encoding"] }
serde = "1"
serde_json = "1"
bincode = "1.3.3"
hex = "0.4.3"
alloy-primitives = { version = "0.6.3", features = ["serde", "k256"] }
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
bs58 = "0.5.0"
ethers-signers = "0.6.2"
holochain = { version = "=0.4.0-dev.12", default-features = false, features = [
  "test_utils",
] }
holochain_keystore = "=0.4.0-dev.12"

[workspace.dependencies.holoom_types]
path = "crates/holoom_types"

[workspace.dependencies.jaq_wrapper]
path = "crates/jaq_wrapper"

[workspace.dependencies.username_registry_utils]
path = "crates/username_registry_utils"

[workspace.dependencies.username_registry_validation]
path = "crates/username_registry_validation"

[workspace.dependencies.username_registry_integrity]
path = "crates/username_registry_integrity"

[workspace.dependencies.username_registry_coordinator]
path = "crates/username_registry_coordinator"

[workspace.dependencies.signer_coordinator]
path = "crates/signer_coordinator"
