[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
resolver = "2"
members = ["crates/*/coordinator","crates/*/integrity"]

[workspace.dependencies]
hdi = "=0.5.0-dev.9"
hdk = "=0.4.0-dev.10"
holo_hash = { version = "=0.4.0-dev.8", features = ["encoding"] }
serde = "1"
serde_json = "1"
bincode = "1.3.3"
hex = "0.4.3"
alloy-primitives = { version = "0.6.3", features = ["serde", "k256"] }
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
bs58 = "0.5.0"
ethers-signers = "0.6.2"
holochain = { version = "=0.4.0-dev.12", default-features = false, features = [
  "test_utils",
] }
holochain_keystore = "=0.4.0-dev.12"
holochain_integrity_types = "0.3"

[workspace.dependencies.holoom_types]
path = "crates/holoom_types"

[workspace.dependencies.jaq_wrapper]
path = "crates/jaq_wrapper"

[workspace.dependencies.shared_utils]
path = "crates/shared_utils"

[workspace.dependencies.shared_tests]
path = "crates/shared_tests"

[workspace.dependencies.username_attestation_coordinator]
path = "crates/username_attestation/coordinator"

[workspace.dependencies.username_attestation_integrity]
path = "crates/username_attestation/integrity"

[workspace.dependencies.external_attestation]
path = "crates/external_attestation/coordinator"

[workspace.dependencies.external_attestation_integrity]
path = "crates/external_attestation/integrity"

[workspace.dependencies.wallet_attestation]
path = "crates/wallet_attestation/coordinator"

[workspace.dependencies.wallet_attestation_integrity]
path = "crates/wallet_attestation/integrity"

[workspace.dependencies.oracle_document]
path = "crates/oracle_document/coordinator"

[workspace.dependencies.oracle_document_integrity]
path = "crates/oracle_document/integrity"

[workspace.dependencies.holoom_recipe]
path = "crates/holoom_recipe/coordinator"

[workspace.dependencies.holoom_recipe_integrity]
path = "crates/holoom_recipe/integrity"

[workspace.dependencies.holoom_recipe_execution]
path = "crates/holoom_recipe_execution/coordinator"

[workspace.dependencies.holoom_recipe_execution_integrity]
path = "crates/holoom_recipe_execution/integrity"

