[package]
name = "external_id_registry_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "external_id_registry_integrity"

[dependencies]
hdi = { workspace = true }
serde = { workspace = true }
holoom_types = { workspace = true }
external_id_registry_validation = { workspace = true }
