[package]
name = "game_identity_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "game_identity_integrity"

[dependencies]
hdi = { workspace = true }
serde = { workspace = true }
game_identity_types = { workspace = true }
game_identity_validation = { workspace = true }
