[package]
name = "game_identity_rocket_state"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "game_identity_rocket_state"

[dependencies]
serde = { workspace = true }
rocket = { workspace = true }
game_identity_rocket_types = { workspace = true }
holochain_client = { workspace = true }
holochain_conductor_api = { workspace = true }
holochain_zome_types = { workspace = true }
