[package]
name = "game_identity_tests"
version = "0.0.1"
edition = "2021"

[[test]]
name = "game_identity_tests"
path = "tests.rs"

[dev-dependencies]
game_identity_types = { workspace = true }
username_registry_validation = { workspace = true }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true, default-features = false, features = [
    "test_utils",
] }
tokio = "1.32.0"
holochain_keystore = { workspace = true }
ethers-signers = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
