[package]
name = "game_identity_tests"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "game_identity_tests"

[dependencies]
serde = { workspace = true }
game_identity_types = { workspace = true }
hdk = { workspace = true, features = ["encoding", "test_utils"] }
holochain = { workspace = true, default-features = false, features = [
    "test_utils",
] }


[dev-dependencies]
username_registry_validation = { workspace = true }
tokio = "1.32.0"
holochain_keystore = { workspace = true }
ethers-signers = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
