[package]
name = "game_identity_validation"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "game_identity_validation"

[dependencies]
hdi = { workspace = true }
holo_hash = { workspace = true }
serde = { workspace = true }
game_identity_types = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
