[package]
name = "holoom_rocket_types"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "holoom_rocket_types"

[dependencies]
serde = { workspace = true }
serde_variant = "0.1.3"
snafu = "0.8.2"
rocket = { workspace = true }
rocket_okapi = { workspace = true }
schemars = { workspace = true }
holochain_client = { workspace = true }
strum = "0.26.2"
strum_macros = "0.26.2"
