[package]
name = "holoom_types"
version = "0.0.3"
edition = "2021"
license = "CAL-1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "holoom_types"

[dependencies]
hdi = { workspace = true }
serde = { workspace = true }
alloy-primitives = { workspace = true }
ed25519-dalek = { workspace = true }
ts-rs = "9"
