[package]
name = "jaq_wrapper"
version = "0.0.1"
edition = "2021"
license = "CAL-1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "jaq_wrapper"

[dependencies]
hdi = { workspace = true }
jaq-interpret = { git = "https://github.com/8e8b2c/jaq", rev = "1870c7c" }
jaq-parse = { git = "https://github.com/8e8b2c/jaq", rev = "1870c7c" }
jaq-core = { git = "https://github.com/8e8b2c/jaq", rev = "1870c7c" }
jaq-std = { git = "https://github.com/8e8b2c/jaq", rev = "1870c7c" }
hifijson = "0.2.0"
