[package]
name = "username_registry_coordinator"
version = "0.0.1"
edition = "2021"
license = "CAL-1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "username_registry_coordinator"

[dependencies]
serde = { workspace = true }
hdk = { workspace = true }
bincode = { workspace = true }
username_registry_integrity = { workspace = true }
holoom_types = { workspace = true }
username_registry_validation = { workspace = true }
username_registry_utils = { workspace = true }
jaq_wrapper = { workspace = true }
indexmap = "2.2.6"
serde_json = { workspace = true }
