[package]
name = "username_registry_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "username_registry_integrity"

[dependencies]
hdi = { workspace = true }
serde = { workspace = true }
game_identity_types = { workspace = true }
username_registry_validation = { workspace = true }
