[package]
name = "username_registry_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "username_registry_integrity"

[dependencies]
hdi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
holoom_types = { workspace = true }
username_registry_validation = { workspace = true }
user_metadata_types = { workspace = true }
user_metadata_validation = { workspace = true }
validation_utils = { workspace = true }
typeshare = { workspace = true }
