[package]
name = "username_registry_integrity"
version = "0.0.1"
edition = "2021"
license = "CAL-1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "username_registry_integrity"

[dependencies]
hdi = { workspace = true }
serde = { workspace = true }
holoom_types = { workspace = true }
username_registry_validation = { workspace = true }
