[package]
name = "username_registry_utils"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "username_registry_utils"

[dependencies]
hdi = { workspace = true }
holo_hash = { workspace = true }
serde = { workspace = true }
holoom_types = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
jaq_wrapper = { workspace = true }
