[package]
name = "username_registry_validation"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "username_registry_validation"

[dependencies]
hdi = { workspace = true }
holo_hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
holoom_types = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
jaq_wrapper = { workspace = true }
username_registry_utils = { workspace = true }
indexmap = "2.2.6"
