[package]
name = "holoom_recipe_execution_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "holoom_recipe_execution_integrity"

[dependencies]
hdi = { workspace = true }
serde = { workspace = true }
holoom_types = { workspace = true }
shared_utils = { workspace = true }
jaq_wrapper = { workspace = true }
indexmap = "2.2.6"


