[package]
name = "oracle_document_integrity"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "oracle_document_integrity"

[dependencies]
hdi = { workspace = true }
serde = { workspace = true }
holoom_types = { workspace = true }
shared_utils = { workspace = true }
#bs58 = { workspace = true }
